tests/ui/borrowck/borrowck-while-break.stderr
error[E0381]: used binding `v` is possibly-uninitialized
  --> $DIR/borrowck-while-break.rs:7:20
   |
LL |     let v;
   |         - binding declared here but left uninitialized
LL |     while cond {
   |           ---- if this condition isn't met and the `while` loop runs 0 times, `v` is not initialized
...
LL |     println!("{}", v);
   |                    ^ `v` used here but it is possibly-uninitialized
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
